--- a/english_only/cv.tex
+++ b/english_only/cv.tex
@@ -3,6 +3,7 @@
 \usepackage[margin=.8in]{geometry}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage[pdftex]{graphicx}
 \usepackage{float}
 \usepackage{tabularx}
 \usepackage{array}
@@ -18,13 +19,13 @@
 {\Large John Gliksberg}
 \hrulefill\\
 \newline
-Aged 20, born 25 June 1994\\
+Aged 21, born 25 June 1994\\
 14 rue Anatole France, 92310 Sèvres, France\\[.1cm]
 +33 6 40 60 76 95\\
 \href{mailto:jg.trosh@gmail.com}
 {jg.trosh\makeatletter @\makeatother gmail.com}\\[.1cm]
 Native speaker in French \& English\\
-Driving licence
+Driving licence and vehicle
 
 \begin{center}
     \framebox{
@@ -53,44 +54,42 @@ or on my own initiative, in French or in English.
 {\setlength{\extrarowheight}{.2cm}
 \begin{tabularx}{\textwidth}{lX}
 2015 \---- 2016 &
-Université de Versailles Saint-Quentin-en-Yvelines (UVSQ)
-\newline
 \href{http://mihps.prism.uvsq.fr}
-{\bf M.Sc. (2nd year), High Performance Computing \& Simulation}\\
-2015 &
-Université de Versailles Saint-Quentin-en-Yvelines (UVSQ)
+{\bf M.Sc. (2nd year), High Performance Computing \& Simulation}
 \newline
+Université de Versailles Saint-Quentin-en-Yvelines (UVSQ) \\
+2015 &
 \href{http://mihps.prism.uvsq.fr}
 {\bf M.Sc. (1st year), High Performance Computing \& Simulation}
-(bien, major)\\
+(bien, major)
+\newline
+Université de Versailles Saint-Quentin-en-Yvelines (UVSQ) \\
 2014 &
-Université de Versailles Saint-Quentin-en-Yvelines (UVSQ)
-\newline
 \href{http://www.uvsq.fr/double-licence-mathematiques-et-physique-343617.kjsp}
-{\bf B.Sc., Mathematics \& Physics}\\
+{\bf B.Sc., Mathematics \& Physics}
+\newline
+Université de Versailles Saint-Quentin-en-Yvelines (UVSQ) \\
 2011 &
-Lycée de Sèvres (SIS)
-\newline
 \href{http://www.education.gouv.fr/cid20999/l-option-internationale-du-baccalaureat-o.i.b.html}
-{\bf Scientific Baccalaureate OIB} (international option)\\
-2010 &
-University of Cambridge
+{\bf Scientific Baccalaureate OIB} (international option)
 \newline
+Lycée de Sèvres (SIS) \\
+2010 &
 \href{http://www.cambridgeenglish.org/exams/proficiency/}
 {\bf Certificate of Proficiency in English} (CPE)
 \---- {\bf C2 level English}
+\newline
+University of Cambridge
 \end{tabularx}}
-\vspace{.4cm}
+\vspace{.3cm}
 
-{\large\bf Mastered Languages \& Tools}
+{\large\bf Portfolio}
 \hrulefill\\[.2cm]
-\begin{tabularx}{\textwidth}{XX|XX|X|XX}
-C          & Python 2/3   & {\sc Blas}   & Open{\sc Mp} & {\sc Html/Css} & Linux     & Makefile \\
-C++        & {\sc Matlab} & {\sc Lapack} & {\sc Mpi}    & {\sc Js}       & bash/zsh  & \LaTeX/groff \\
-Fortran 77 & Scilab       & {\sc Vtk}    & {\sc Gtk}    & {\sc Php}      & vim/emacs & git/svn \\
-Lua        & Go           & {\sc Cuda}   & libgd        & {\sc Sql}      & Paraview  & regex
-\end{tabularx}
-\vspace{.8cm}
+Languages : C, C++, Python 2/3, Lua, Go, Scilab, Matlab, Fortran, Cuda \\
+Libraries : Blas, Lapack, Vtk, MPI, OpenMP \\
+Tools : Linux, bash/zsh, vim/emacs, Paraview, Makefile, \LaTeX, git/svn \\
+Misc : html/css, js, php, sql
+\vspace{.3cm}
 
 {\large\bf Professional activities}
 \hrulefill\\[.2cm]
@@ -118,7 +117,7 @@ English tutor and teacher,
 \newline
 Group tutoring, individual classes for deaf students\
 \end{tabularx}}
-\vspace{.4cm}
+\vspace{.3cm}
 
 {\large\bf Extracurricular activities}
 \hrulefill\\[.3cm]
@@ -137,7 +136,7 @@ Student representative at the Faculty Council
 {\setlength{\extrarowheight}{.15cm}
 \begin{tabularx}{\textwidth}{X}
 Drawing (portraits, comic-strips) \hfill
-Reading (daily), cinema (SF,...) \hfill
+Reading, cinema (SF) \hfill
 Table tennis \\
 Music (electronic, bossa nova, jazz) \hfill
 Project Euler \hfill
@@ -145,5 +144,4 @@ Procedural animation
 \end{tabularx}}
 
 \end{document}
-\grid
-\grid
+
