--- a/cv.tex
+++ b/cv.tex
@@ -27,7 +27,6 @@
 \href{mailto:jg.trosh@gmail.com}
 {jg.trosh@gmail.com}\\[.2cm]
 Langues maternelles français \& anglais\\
-Permis B, véhicule personnel
 \end{flushleft}
 \end{minipage}%
 \begin{minipage}{0.2\textwidth}
@@ -42,8 +41,7 @@ Permis B, véhicule personnel
     \framebox{
         \parbox{335\unitlength}{
             \centering\large\sc
-	    Jeune docteur \\
-            Ingénieur recherche spécialisé HPC
+            Ingénieur recherche \---- Informatique et HPC
         }
     }
 \end{center}
@@ -60,6 +58,58 @@ Permis B, véhicule personnel
 %de mon initiative, en français autant qu'en anglais.
 %}
 %\vspace{.3cm}
+
+%{\large\bf Portfolio}
+%\hrulefill\\[.2cm]
+%Langages : C, C++, Python 2/3, Lua, Go, Scilab, Matlab, Fortran, Cuda \\
+%Librairies : Blas, Lapack, Vtk, MPI, OpenMP \\
+%Outils : Linux, bash/zsh, vim/emacs, Paraview, Makefile, \LaTeX, git/svn \\
+%Misc : html/css, js, php, sql
+%\vspace{.3cm}
+
+{\large\bf Activités}
+\hrulefill\\[.2cm]
+{\setlength{\extrarowheight}{.2cm}
+\begin{tabularx}{\textwidth}{lX}
+2016\--- &
+\href{https://eviden.com}{\bf Eviden (ex-Bull)}, Bruyères-le-Châtel
+\newline
+Ingénieur recherche \---- logiciel management réseau HPC BXI, expert routage \newline
+Work package leader du projet \href{https://net4exa.eu/}{NET4EXA}\newline
+Développement en C et Python, travail en équipe Agile, expertise Git \newline
+2 dépots de brevets, 2 CIR \\
+2024\---2025 &
+\href{https://www.uvsq.fr/institut-des-sciences-et-techniques-des-yvelines-isty}{\bf ISTY}, Vélizy-Villacoublay \newline
+Enseignant vacataire \--- techniques et outils de l'ingénieur \newline
+Classe de 38 élèves, CM et TP \\
+2016 &
+\href{https://3ds.com}{\bf Dassault Systèmes}, Vélizy-Villacoublay \newline
+Stage de 6 mois à temps complet \---- chercheur logiciel \newline
+Simulation de solides déformables avec réduction d'ordre de modèle, portage GPU \\
+2015 &
+\href{https://www.scilab.org/about/company}{\bf Scilab-Enterprises}, Versailles
+\newline
+Stage de 4 mois à temps complet \---- développeur logiciel open-source
+\newline
+Industrialisation de modules Scilab, développements sur Scilab 6
+\\
+2014 &
+Laboratoire de physique
+\href{https://www.gemac.uvsq.fr/}
+{\bf GEMaC\--CNRS\--UVSQ}, Versailles
+\newline
+Stage de 4 mois à temps partiel
+\newline
+\og Étude visuelle de transitions de phase dans des monocristaux\fg
+\\
+2013\---2015 &
+Tuteur et formateur en anglais,
+\href{https://www.cerel.uvsq.fr/}
+{\bf CEREL \makeatletter @ \makeatother UVSQ} \newline
+Tutorats en groupes \----
+Cours individuels pour étudiants malentendants
+\end{tabularx}}
+\vspace{.3cm}
 
 {\large\bf Études}
 \hrulefill\\[.3cm]
@@ -97,60 +147,12 @@ University of Cambridge
 \end{tabularx}}
 \vspace{.3cm}
 
-%{\large\bf Portfolio}
-%\hrulefill\\[.2cm]
-%Langages : C, C++, Python 2/3, Lua, Go, Scilab, Matlab, Fortran, Cuda \\
-%Librairies : Blas, Lapack, Vtk, MPI, OpenMP \\
-%Outils : Linux, bash/zsh, vim/emacs, Paraview, Makefile, \LaTeX, git/svn \\
-%Misc : html/css, js, php, sql
-%\vspace{.3cm}
-
-{\large\bf Activités professionnelles}
-\hrulefill\\[.2cm]
-{\setlength{\extrarowheight}{.2cm}
-\begin{tabularx}{\textwidth}{lX}
-2016\--- &
-{\bf Atos Big Data \& Security (ex-Bull)}, Bruyères-le-Châtel
-\newline
-Ingénieur recherche \---- logiciel management réseau HPC BXI, expert routage \newline
-Développement en C et Python, travail en équipe Agile, expertise Git \newline
-Membre d'un projet de travail en collaboration européenne \newline
-2 dépots de brevets, 2 CIR \\
-2016 &
-\href{https://3ds.com}{\bf Dassault Systèmes}, Vélizy-Villacoublay \newline
-Stage de 6 mois à temps complet \---- chercheur logiciel \newline
-Simulation de solides déformables avec réduction d'ordre de modèle, portage GPU \\
-2015 &
-\href{https://www.scilab.com}{\bf Scilab-Enterprises}, Versailles
-\newline
-Stage de 4 mois à temps complet \---- développeur logiciel open-source
-\newline
-Industrialisation de modules Scilab, développements sur Scilab 6
-\\
-2014 &
-Laboratoire de physique
-\href{https://www.gemac.uvsq.fr/}
-{\bf GEMaC\--CNRS\--UVSQ}, Versailles
-\newline
-Stage de 4 mois à temps partiel
-\newline
-\og Étude visuelle de transitions de phase dans des monocristaux\fg
-\\
-2013\---2015 &
-Tuteur et formateur en anglais,
-\href{https://www.cerel.uvsq.fr/}
-{\bf CEREL \makeatletter @ \makeatother UVSQ} \newline
-Tutorats en groupes \----
-Cours individuels pour étudiants malentendants
-\end{tabularx}}
-\vspace{.3cm}
-
 {\large\bf Autres activités}
 \hrulefill\\[.3cm]
 {\setlength{\extrarowheight}{.15cm}
 \begin{tabularx}{\textwidth}{lX}
 2023\---2024 &
-\href{https://travelbellies.blog}{Tour du monde} pendant 11 mois (congé sabbatique) \\
+\href{https://travelbellies.blog}{Tour du monde} pendant 11 mois \\
 2014\---2015 &
 Coordinateur et co-fondateur de l'association
 \href{https://www.facebook.com/pages/Seventy-Eighters/508772502567015}
@@ -301,4 +303,3 @@ Coordinateur et co-fondateur de l'association
 %\end{tabularx}}
 
 \end{document}
-
